--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-eslint": "^10.0.2",
     "eslint": "^6.1.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "gh-pages": "^2.0.1"
   }
 }
