Ran prettier on all files

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,23 +14,21 @@
       "jsx": true
     }
   },
-  "plugins": [
-    "react-hooks"
-  ],
+  "plugins": ["react-hooks"],
   "rules": {
     "brace-style": "error",
     "camelcase": ["error", { "properties": "never" }],
     "comma-dangle": ["error", "never"],
     "func-call-spacing": ["error", "never"],
     "eqeqeq": "warn",
-    "indent": [ "error", 2, { "SwitchCase": 1 } ],
-    "key-spacing": [ "error", { "beforeColon": false } ],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "key-spacing": ["error", { "beforeColon": false }],
     "no-console": "off",
     "no-fallthrough": "warn",
     "prefer-const": "error",
-    "quotes": [ "error", "single" ],
-    "semi": [ "error", "never" ],
-    "react/prop-types": [ 0 ],
+    "quotes": ["error", "single"],
+    "semi": ["error", "never"],
+    "react/prop-types": [0],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
   }
