--- a/package.json
+++ b/package.json
@@ -20,28 +20,28 @@
   },
   "homepage": "https://github.com/Fearchar/fearchar.github.io#readme",
   "dependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.13.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
     "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
     "eslint": "^6.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
     "gh-pages": "^2.0.1",
-    "prettier": "^2.3.0"
+    "html-webpack-plugin": "3.2.0",
+    "node-sass": "4.13.1",
+    "prettier": "^2.3.0",
+    "sass-loader": "7.1.0",
+    "style-loader": "^2.0.0",
+    "webpack": "4.38.0",
+    "webpack-cli": "3.3.6",
+    "webpack-dev-server": "3.7.2"
   }
 }
