--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/Fearchar/fearchar.github.io.git"
   },
-  "author": "",
+  "author": "Fearchar MacLean",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Fearchar/fearchar.github.io/issues"
