--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,7 @@
     "eqeqeq": "warn",
     "indent": ["error", 2, { "SwitchCase": 1 }],
     "key-spacing": ["error", { "beforeColon": false }],
-    "no-console": "off",
+    "no-console": "error",
     "no-fallthrough": "warn",
     "prefer-const": "error",
     "quotes": ["error", "single"],
