Created title component

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
     "semi": ["error", "never"],
     "react/prop-types": [0],
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "warn",
+    "curly": ["error", "all"]
   }
 }
